# stable-swap

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.md  Vagrantfile  bpf-sdk-install.sh  do.sh  docker-compose.yml  flake.nix  localnet-address.json  shell.nix
.github/workflows/: client.yml  fuzz.yml  fuzzing.yml  libraries.yml  main.yml  prebuild.yml  program.yml  release.yml
client/: package.json  tsconfig.json
client/src/: instructions.ts  layout.ts
fuzz/: Cargo.toml  README.md
fuzz/src/: lib.rs  main.rs  native_account_data.rs  native_processor.rs  native_program_account.rs  native_stable_swap.rs  native_token.rs
fuzz/targets/: full.rs  swap_only.rs  swaps_only.rs
lib/client/: .babelrc.json  jest.config.ts  package.json  tsconfig.build.json  tsconfig.json
lib/client/lib/: client.js  constants.d.ts.map  constants.js  fees.d.ts.map  fees.js  index.d.ts.map  index.js  instructions.d.ts  instructions.d.ts.map  instructions.js  layout.d.ts.map  layout.js  stable-swap.d.ts.map  stable-swap.js
lib/client/lib/scripts/: new-swap.d.ts  new-swap.d.ts.map  new-swap.js
lib/client/lib/src/: constants.d.ts  constants.d.ts.map  constants.js  fees.d.ts  fees.d.ts.map  fees.js  index.d.ts  index.d.ts.map  index.js  instructions.d.ts.map  instructions.js  layout.d.ts  layout.d.ts.map  layout.js  stable-swap.d.ts  stable-swap.d.ts.map  stable-swap.js
lib/client/lib/src/util/: account.d.ts.map  account.js  calculator.d.ts  calculator.d.ts.map  calculator.js  calculator.unit.test.d.ts  calculator.unit.test.d.ts.map  calculator.unit.test.js  send-and-confirm-transaction.d.ts.map  send-and-confirm-transaction.js  u64.d.ts  u64.d.ts.map  u64.js
lib/client/lib/test/: e2e.int.test.d.ts  e2e.int.test.d.ts.map  e2e.int.test.js  helpers.d.ts  helpers.d.ts.map  helpers.js
lib/client/lib/util/: account.d.ts  account.d.ts.map  account.js  calculator.d.ts.map  calculator.js  send-and-confirm-transaction.d.ts  send-and-confirm-transaction.d.ts.map  send-and-confirm-transaction.js  u64.d.ts.map  u64.js
lib/client/scripts/: deploy.ts  new-swap.ts  new_swap.js  new_swap.ts
lib/client/src/: buffer-layout.d.ts  constants.ts  fees.ts  index.ts  instructions.ts  layout.ts  stable-swap.ts
lib/client/src/typings/: solana-spl-token.d.ts
lib/client/src/util/: account.ts  calculator.ts  calculator.unit.test.ts  send-and-confirm-transaction.ts  signerOrAccount.ts  u64.ts
lib/client/test/: e2e.int.test.ts  e2e.test.ts  helpers.ts
lib/sim/: simulation.py
lib/sim/src/: lib.rs
program/src/: instruction.rs
proptest-regressions/: curve.txt
script/: deploy_stable_swap.sh
scripts/: bpf-sdk-install.sh  deploy-stable-swap.sh  deploy_stable_swap.sh  setup-devenv.sh  use-system-compiler.sh
sdk/: .eslintrc.js  .gitignore  README.md  package.json  tsconfig.build.json  tsconfig.json
sdk/scripts/: new-swap.ts
sdk/src/: index.ts  instructions.ts  layout.ts  stable-swap.ts
sdk/src/util/: calculator.unit.test.ts  u64.ts
sdk/test/: e2e.int.test.ts  helpers.ts
sim/: simulation.py
sim/src/: lib.rs  main.rs
src/: admin.rs  bn.rs  curve.rs  error.rs  fees.rs  helpers.rs  instruction.rs  lib.rs  pool_converter.rs  processor.rs  state.rs  utils.rs
stable-swap-anchor/: Cargo.toml  README.md
stable-swap-anchor/src/: accounts.rs  instructions.rs  lib.rs  state.rs
stable-swap-client/: Cargo.toml  README.md
stable-swap-client/src/: error.rs  fees.rs  fraction.rs  instruction.rs  lib.rs  state.rs
stable-swap-math/: Cargo.toml  README.md
stable-swap-math/proptest-regressions/: curve.txt
stable-swap-math/sim/: Cargo.toml  README.md  simulation.py
stable-swap-math/sim/src/: lib.rs
stable-swap-math/src/: bn.rs  curve.rs  lib.rs  math.rs  pool_converter.rs  price.rs
stable-swap-program/: .gitignore  Anchor.toml  Cargo.toml  README.md  Vagrantfile  do.sh  env.nix  flake.nix  shell.nix  stableswap.code-workspace
stable-swap-program/.github/: dependabot.yml
stable-swap-program/.github/workflows/: fuzzing.yml  program-e2e.yml  program-unit-test.yml  program.yml  release.yml  sdk.yml
stable-swap-program/.husky/: pre-commit
stable-swap-program/fuzz/: Cargo.toml
stable-swap-program/fuzz/src/: lib.rs  main.rs  native_processor.rs  native_stable_swap.rs
stable-swap-program/program/: Cargo.toml  README.md
stable-swap-program/program/proptest-regressions/: curve.txt
stable-swap-program/program/src/: bn.rs  curve.rs  entrypoint.rs  error.rs  fees.rs  instruction.rs  lib.rs  math.rs  pool_converter.rs  state.rs
stable-swap-program/program/src/processor/: admin.rs  checks.rs  logging.rs  macros.rs  mod.rs  swap.rs  test_utils.rs  token.rs  utils.rs
stable-swap-program/scripts/: _common.sh  deploy-mainnet-pools.sh  deploy-program.sh  deploy-test-pools.sh  deployment_config.json  recover-deploy.sh  setup-devenv.sh  stableswap
stable-swap-program/sdk/: .eslintignore  .eslintrc.js  README.md  babel.config.js  dummy.json  jest.config.ts  package.json  tsconfig.build.json  tsconfig.json
stable-swap-program/sdk/src/: buffer-layout.d.ts  constants.ts  events.ts  index.ts  stable-swap.ts
stable-swap-program/sdk/src/calculator/: amounts.ts  amounts.unit.test.ts  curve.ts  curve.unit.test.ts  index.ts
stable-swap-program/sdk/src/cli/: index.ts
stable-swap-program/sdk/src/entities/: exchange.ts  index.ts
stable-swap-program/sdk/src/instructions/: admin.ts  common.ts  index.ts  swap.ts
stable-swap-program/sdk/src/state/: fees.ts  index.ts  layout.ts
stable-swap-program/sdk/src/util/: account.ts  deployTestTokens.ts  index.ts  initialize.ts  instructions.ts
stable-swap-program/sdk/test/: admin.int.test.ts  deployTestTokens.ts  e2e.int.test.ts  helpers.ts
stable-swap-program/sim/: Cargo.toml
stable-swap-program/sim/src/: lib.rs
