
# Note: This crate must be built using do.sh

[package]
name = "spl-token-swap"
version = "0.1.0"
description = "Solana Program Library Token Swap"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2018"
exclude = ["js/**"]

[features]
no-entrypoint = []

[dependencies]
arrayref = "0.3.6"
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.5.1"
spl-token = { version = "3.0.1", features = ["no-entrypoint"] }
uint = { version = "0.8.3", default-features = false }
thiserror = "1.0"

[dev-dependencies]
solana-sdk = "1.5.1"
proptest = { version = "0.10" }
rand = { version = "0.7.0"}
sim =  { path = "./lib/sim" }

[lib]
name = "stable_swap"
crate-type = ["cdylib", "lib"]
