
# Note: This crate must be built using do.sh

[package]
name = "stable-swap"
version = "0.1.0"
authors = ["michaelhly <michaelhly@gmail.com>"]
edition = "2018"

[features]
no-entrypoint = []
fuzz = ["arbitrary"]

[dependencies]
arbitrary = { version = "0.4.6", features = ["derive"], optional = true }
arrayref = "0.3.6"
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.5.1"
spl-token = { version = "3.0.1", features = ["no-entrypoint"] }
uint = { version = "0.8.3", default-features = false }
thiserror = "1.0"

[dev-dependencies]
solana-sdk = "1.5.1"
proptest = { version = "0.10" }
rand = { version = "0.7.0"}
sim =  { path = "./lib/sim" }

[lib]
name = "stable_swap"
crate-type = ["cdylib", "lib"]
