[package]
name = "stable-swap-fuzz"
version = "0.2.0"
authors = ["michaelhly <michaelhly@gmail.com>"]
edition = "2018"
description = "Fuzzing for Saber StableSwap program."
homepage = "https://saber.so"
repository = "https://github.com/saber-hq/stable-swap"
keywords = ["solana", "saber"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata]
cargo-fuzz = true

[lib]
name = "fuzz"

[dependencies]
arbitrary = "1.0.0"
chrono = "0.4"
lazy_static = "1.4.0"
libfuzzer-sys = "0.4.0"
rand = { version = "0.8.4" }
solana-program = "^1.9"
spl-token = { version = "3.1.0", features = ["no-entrypoint"] }
stable-swap = { path = "../stable-swap-program/program", features = [
    "fuzz",
    "program",
    "no-entrypoint"
] }

[[bin]]
name = "fuzz_test"
path = "src/main.rs"
test = false
doc = false
