[package]
name = "stable-swap-anchor"
version = "1.5.5"
description = "Anchor bindings for the StableSwap Rust client."
license = "Apache-2.0"
authors = ["michaelhly <michaelhly@gmail.com>"]
homepage = "https://saber.so"
repository = "https://github.com/saber-hq/stable-swap"
edition = "2018"
keywords = ["solana", "saber", "anchor"]

[dependencies]
anchor-lang = ">=0.17"
anchor-spl = ">=0.17"
stable-swap-client = { path = "../stable-swap-client", version = "^1" }
