[package]
name = "stable-swap-anchor"
version = "1.8.1"
description = "Anchor bindings for the StableSwap Rust client."
license = "Apache-2.0"
authors = ["michaelhly <michaelhly@gmail.com>"]
homepage = "https://saber.so"
repository = "https://github.com/saber-hq/stable-swap"
edition = "2021"
keywords = ["solana", "saber", "anchor"]

[dependencies]
anchor-lang = ">=0.22.0"
stable-swap-client = { path = "../stable-swap-client", version = "^1" }
