[package]
name = "stable-swap-client"
version = "1.5.2"
description = "StableSwap Rust client."
license = "Apache-2.0"
authors = ["michaelhly <michaelhly@gmail.com>"]
homepage = "https://saber.so"
repository = "https://github.com/saber-hq/stable-swap"
edition = "2018"
keywords = ["solana", "saber"]

[dependencies]
arbitrary = { version = "1.0.3", features = ["derive"], optional = true }
arrayref = "0.3.6"
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.8.3"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
thiserror = "1.0"
