[package]
name = "stable-swap-client"
version = "1.8.1"
description = "StableSwap Rust client."
license = "Apache-2.0"
authors = ["michaelhly <michaelhly@gmail.com>"]
homepage = "https://saber.so"
repository = "https://github.com/saber-hq/stable-swap"
edition = "2021"
keywords = ["solana", "saber"]

[features]
fuzz = ["arbitrary"]

[dependencies]
arbitrary = { version = "1.0.2", features = ["derive"], optional = true }
arrayref = "0.3.6"
num-derive = "0.3"
num-traits = "0.2"
solana-program = "^1.7"
thiserror = "1.0"
