[package]
name = "stable-swap-math"
version = "1.4.0"
description = "Calculations for the StableSwap invariant"
license = "Apache-2.0"
authors = ["michaelhly <michaelhly@gmail.com>"]
edition = "2018"

[dependencies]
borsh = "0.9.1"
num-traits = "0.2"
stable-swap-client = { path = "../stable-swap-client", version = "1.0.0" }
uint = { version = "0.9.1", default-features = false }
