[package]
name = "stable-swap-math"
version = "1.6.8"
description = "Calculations for the StableSwap invariant"
license = "Apache-2.0"
authors = ["michaelhly <michaelhly@gmail.com>"]
homepage = "https://saber.so"
repository = "https://github.com/saber-hq/stable-swap"
edition = "2021"
keywords = ["solana", "saber", "math"]

[dependencies]
borsh = "0.9.1"
num-traits = "0.2"
stable-swap-client = { path = "../stable-swap-client", version = "^1" }
uint = { version = "0.9.1", default-features = false }

[dev-dependencies]
proptest = "1.0.0"
rand = "0.8.4"
stable-swap-sim = { path = "./sim", version = "^0.1" }
