[package]
name = "stable-swap-sim"
version = "0.1.4"
authors = ["michaelhly <michaelhly@gmail.com>"]
description = "Simulations of the StableSwap invariant compared to Curve's reference implementation."
license = "Apache-2.0"
homepage = "https://saber.so"
repository = "https://github.com/saber-hq/stable-swap"
edition = "2021"
keywords = ["solana", "saber", "curve", "sim"]

[lib]
name = "sim"

[dependencies]
pyo3 = { version = "^0.19.0", features = ["auto-initialize"] }
