# Note: This crate must be built using do.sh
[package]
name = "stable-swap"
version = "1.2.0"
authors = ["michaelhly <michaelhly@gmail.com>"]
edition = "2018"

[features]
program = []
no-entrypoint = []
fuzz = ["arbitrary"]

[dependencies]
arbitrary = { version = "1.0.0", features = ["derive"], optional = true }
arrayref = "0.3.6"
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.6.10"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
uint = { version = "0.9.1", default-features = false }
thiserror = "1.0"

[dev-dependencies]
solana-sdk = "1.7.4"
proptest = { version = "1.0.0" }
rand = { version = "0.8.4" }
sim = { path = "../sim" }

[lib]
name = "stable_swap"
crate-type = ["cdylib", "lib"]
