# Note: This crate must be built using do.sh
[package]
name = "stable-swap"
version = "1.1.0"
authors = ["michaelhly <michaelhly@gmail.com>"]
edition = "2021"
description = "Saber StableSwap program."
homepage = "https://saber.so"
repository = "https://github.com/saber-hq/stable-swap"
keywords = ["solana", "saber"]

[features]
program = []
no-entrypoint = []
fuzz = ["stable-swap-client/fuzz"]

[dependencies]
solana-program = "^1.6.10"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
stable-swap-client = "1.5.5"
stable-swap-math = "1.5.5"

[dev-dependencies]
solana-sdk = "^1.6.10"

[lib]
name = "stable_swap"
crate-type = ["cdylib", "lib"]
