[package]
name = "stable-swap"
version = "1.6.9"
authors = ["michaelhly <michaelhly@gmail.com>"]
edition = "2021"
description = "Saber StableSwap program."
homepage = "https://saber.so"
repository = "https://github.com/saber-hq/stable-swap"
keywords = ["solana", "saber", "program"]
license = "Apache-2.0"

[features]
program = []
no-entrypoint = []
fuzz = ["stable-swap-client/fuzz"]

[dependencies]
solana-program = "^1.6.10"
spl-token = { version = "3.3.0", features = ["no-entrypoint"] }
stable-swap-client = { path = "../../stable-swap-client", version = "^1" }
stable-swap-math = { path = "../../stable-swap-math", version = "^1" }

[dev-dependencies]
solana-sdk = "^1.9.6"

[lib]
name = "stable_swap"
crate-type = ["cdylib", "lib"]
